# ProyectoMachineLearning

./: .gitignore  .gitignore.txt  Dockerfile  README.md  dvc.yaml
proyectomachineml/: .gitignore  README.md  pyproject.toml  requirements.txt
proyectomachineml/conf/base/: catalog.yml  parameters.yml  parameters_data_engineering.yml  parameters_reporting.yml
proyectomachineml/conf/local/: credentials.yml
proyectomachineml/data/: .gitignore  01_raw.dvc  02_intermediate.dvc  03_primary.dvc  05_model_input.dvc  06_models.dvc  07_model_output.dvc  08_reporting.dvc
proyectomachineml/data/07_model_output/: classification_metrics_20251101-223146.csv  regression_metrics_20251101-222650.csv
proyectomachineml/notebooks/: 02_data_preparation.ipynb  03_data_understanding.ipynb  04_Modeling_Clasificacion.ipynb  04_Modeling_Regresion.ipynb  Presentacion.ipynb  analysis_report.ipynb  final_report.ipynb  test.ipynb
proyectomachineml/src/proyectomachineml/: __init__.py  __main__.py  pipeline_registry.py  settings.py
proyectomachineml/src/proyectomachineml/pipelines/classification/: nodes.py  pipeline.py
proyectomachineml/src/proyectomachineml/pipelines/data_cleaning/: nodes.py  pipeline.py
proyectomachineml/src/proyectomachineml/pipelines/data_engineering/: __init__.py  nodes.py  pipeline.py
proyectomachineml/src/proyectomachineml/pipelines/data_science/: __init__.py  (+2 more)
proyectomachineml/tests/pipelines/data_engineering/: test_pipeline.py
proyectomachineml/tests/pipelines/data_science/: test_pipeline.py
proyectomachineml/tests/pipelines/reporting/: test_pipeline.py
(+9 files in other folders)
